base/lowcode/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodered
  labels:
    app: nodered
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: nodered
  template:
    metadata:
      labels:
        app: nodered
    spec:
      restartPolicy: Always
      containers:
        - name: nodered
          image: ghcr.io/5minds/processcube_lowcode:1.3.1
          ports:
            - containerPort: 1880
          volumeMounts:
            - name: data
              mountPath: "/data"
      securityContext:
        fsGroup: 1000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nodered-data
      imagePullSecrets:
        - name: regcred
