base/lowcode/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodered
  labels:
    app: nodered
spec:
  type: ClusterIP
  ports:
    - port: 1880
      name: api
      protocol: TCP
  selector:
    app: nodered
