base/lowcode/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodered
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec: 
  ingressClassName: nginx
  tls:
  - hosts:
    - nodered.dev.5minds.cloud
    secretName: nodered-ingress-tls
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodered
                port: 
                  number: 30000
